RESOLVED FIXED94136
[BlackBerry] Should not keep recreating GeoTracker in setEnableHighAccuracy()
https://bugs.webkit.org/show_bug.cgi?id=94136
Summary [BlackBerry] Should not keep recreating GeoTracker in setEnableHighAccuracy()
Yong Li
Reported 2012-08-15 12:25:23 PDT
setEnableHighAccuracy(true) always recreates GeoTracker, and can also start tracking when it should be suspended.
Attachments
the patch (2.30 KB, patch)
2012-08-15 12:52 PDT, Yong Li
no flags
Yong Li
Comment 1 2012-08-15 12:52:52 PDT
Created attachment 158620 [details] the patch
Rob Buis
Comment 2 2012-08-15 13:04:07 PDT
Comment on attachment 158620 [details] the patch LGTM.
WebKit Review Bot
Comment 3 2012-08-15 14:13:30 PDT
Comment on attachment 158620 [details] the patch Clearing flags on attachment: 158620 Committed r125705: <http://trac.webkit.org/changeset/125705>
WebKit Review Bot
Comment 4 2012-08-15 14:13:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.