[BlackBerry] Should not keep recreating GeoTracker in setEnableHighAccuracy() https://bugs.webkit.org/show_bug.cgi?id=94136

Patch by Yong Li <yoli@rim.com> on 2012-08-15
Reviewed by Rob Buis.
Internally reviewed by Lyon Chen.

PR# 192401.
1. The prototype of GeoTracker::create() has changed.
2. Fix the issue that it could recreate tracker unnecessarily when
   setEnableHighAccuracy() is called but accuracy requirment hasn't
   changed.
3. Fix the issue setEnableHighAccuracy() could start tracking when
   tracker was suspended.

* WebCoreSupport/GeolocationControllerClientBlackBerry.cpp:
(GeolocationControllerClientBlackBerry::startUpdating):
(GeolocationControllerClientBlackBerry::setEnableHighAccuracy):

Canonical link: https://commits.webkit.org/111963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125705 268f45cc-cd09-0410-ab3c-d52691b4dbfc